Feat: Weather API integration with UI layout

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>OpenUI5 Todo App</title>
+	<title>Weather Forecast App</title>
 
 	<script id="sap-ui-bootstrap"
 		src="resources/sap-ui-core.js"
@@ -20,6 +20,6 @@
 </head>
 
 <body class="sapUiBody">
-	<div data-sap-ui-component data-name="demo.weatherforecast" data-id="container" data-settings='{"id" : "todo"}'></div>
+	<div data-sap-ui-component data-name="demo.weatherforecast" data-id="container" data-settings='{"id" : "weather"}'></div>
 </body>
 </html>
